[gd_scene load_steps=68 format=3 uid="uid://bfh4rbq3rn6dq"]

[ext_resource type="Script" path="res://Scripts/Player/Player.gd" id="1_3o552"]
[ext_resource type="Texture2D" uid="uid://d1ncncqyi4lbj" path="res://Assets/Modern Interiors/Characters/Bruce_16x16.png" id="2_f0qtc"]
[ext_resource type="Script" path="res://Scripts/Player/DashTimer.gd" id="3_8tjbm"]
[ext_resource type="Script" path="res://Scripts/Player/DashTiming.gd" id="4_6bjok"]
[ext_resource type="PackedScene" uid="uid://bqik3dt8mmk1w" path="res://Scenes/Data.tscn" id="5_hpp62"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1xxl3"]
radius = 2.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gy1vo"]
atlas = ExtResource("2_f0qtc")
region = Rect2(288, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl5bq"]
atlas = ExtResource("2_f0qtc")
region = Rect2(304, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_12xdl"]
atlas = ExtResource("2_f0qtc")
region = Rect2(320, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya704"]
atlas = ExtResource("2_f0qtc")
region = Rect2(336, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72lky"]
atlas = ExtResource("2_f0qtc")
region = Rect2(352, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uminh"]
atlas = ExtResource("2_f0qtc")
region = Rect2(368, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecwm1"]
atlas = ExtResource("2_f0qtc")
region = Rect2(192, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7ds5"]
atlas = ExtResource("2_f0qtc")
region = Rect2(208, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ik3a"]
atlas = ExtResource("2_f0qtc")
region = Rect2(224, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2cbt"]
atlas = ExtResource("2_f0qtc")
region = Rect2(240, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e4xy"]
atlas = ExtResource("2_f0qtc")
region = Rect2(256, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q502n"]
atlas = ExtResource("2_f0qtc")
region = Rect2(272, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g7i4"]
atlas = ExtResource("2_f0qtc")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pl3rb"]
atlas = ExtResource("2_f0qtc")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y8gi"]
atlas = ExtResource("2_f0qtc")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_56aph"]
atlas = ExtResource("2_f0qtc")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwt2a"]
atlas = ExtResource("2_f0qtc")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_282sf"]
atlas = ExtResource("2_f0qtc")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsuu4"]
atlas = ExtResource("2_f0qtc")
region = Rect2(96, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgy8m"]
atlas = ExtResource("2_f0qtc")
region = Rect2(112, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htdpy"]
atlas = ExtResource("2_f0qtc")
region = Rect2(128, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmggu"]
atlas = ExtResource("2_f0qtc")
region = Rect2(144, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clyvc"]
atlas = ExtResource("2_f0qtc")
region = Rect2(160, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aol4q"]
atlas = ExtResource("2_f0qtc")
region = Rect2(176, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klr2b"]
atlas = ExtResource("2_f0qtc")
region = Rect2(288, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwvac"]
atlas = ExtResource("2_f0qtc")
region = Rect2(304, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4clw"]
atlas = ExtResource("2_f0qtc")
region = Rect2(320, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpy51"]
atlas = ExtResource("2_f0qtc")
region = Rect2(336, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3omn"]
atlas = ExtResource("2_f0qtc")
region = Rect2(352, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuuwm"]
atlas = ExtResource("2_f0qtc")
region = Rect2(368, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa8ei"]
atlas = ExtResource("2_f0qtc")
region = Rect2(192, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmkdv"]
atlas = ExtResource("2_f0qtc")
region = Rect2(208, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5qoj"]
atlas = ExtResource("2_f0qtc")
region = Rect2(224, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ergy"]
atlas = ExtResource("2_f0qtc")
region = Rect2(240, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ns8n"]
atlas = ExtResource("2_f0qtc")
region = Rect2(256, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmaed"]
atlas = ExtResource("2_f0qtc")
region = Rect2(272, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6ikc"]
atlas = ExtResource("2_f0qtc")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_crvu4"]
atlas = ExtResource("2_f0qtc")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuohn"]
atlas = ExtResource("2_f0qtc")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dlmy"]
atlas = ExtResource("2_f0qtc")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwq8j"]
atlas = ExtResource("2_f0qtc")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55vfb"]
atlas = ExtResource("2_f0qtc")
region = Rect2(80, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqnvv"]
atlas = ExtResource("2_f0qtc")
region = Rect2(96, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgwst"]
atlas = ExtResource("2_f0qtc")
region = Rect2(112, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxrbj"]
atlas = ExtResource("2_f0qtc")
region = Rect2(128, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4dgi"]
atlas = ExtResource("2_f0qtc")
region = Rect2(144, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq2ar"]
atlas = ExtResource("2_f0qtc")
region = Rect2(160, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_827uj"]
atlas = ExtResource("2_f0qtc")
region = Rect2(176, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kavo"]
atlas = ExtResource("2_f0qtc")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc264"]
atlas = ExtResource("2_f0qtc")
region = Rect2(224, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67xia"]
atlas = ExtResource("2_f0qtc")
region = Rect2(256, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u778j"]
atlas = ExtResource("2_f0qtc")
region = Rect2(288, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jsd6"]
atlas = ExtResource("2_f0qtc")
region = Rect2(320, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_so0c1"]
atlas = ExtResource("2_f0qtc")
region = Rect2(352, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jtqe"]
atlas = ExtResource("2_f0qtc")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdduy"]
atlas = ExtResource("2_f0qtc")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvy1n"]
atlas = ExtResource("2_f0qtc")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaanf"]
atlas = ExtResource("2_f0qtc")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7prn3"]
atlas = ExtResource("2_f0qtc")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6klt"]
atlas = ExtResource("2_f0qtc")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_aberw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy1vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl5bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12xdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya704")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72lky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uminh")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecwm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7ds5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ik3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2cbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e4xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q502n")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g7i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pl3rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y8gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56aph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwt2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_282sf")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsuu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgy8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htdpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmggu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clyvc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aol4q")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_klr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwvac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4clw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpy51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3omn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuuwm")
}],
"loop": true,
"name": &"run_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa8ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmkdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5qoj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ergy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ns8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmaed")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6ikc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crvu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuohn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dlmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwq8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55vfb")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqnvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgwst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxrbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4dgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq2ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_827uj")
}],
"loop": true,
"name": &"run_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kavo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc264")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67xia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u778j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jsd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so0c1")
}],
"loop": true,
"name": &"sit_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jtqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdduy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvy1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaanf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7prn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6klt")
}],
"loop": true,
"name": &"sit_right",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3o552")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1xxl3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_aberw")
animation = &"idle_down"
frame_progress = 0.669371

[node name="DashTimer" type="Timer" parent="."]
one_shot = true
autostart = true
script = ExtResource("3_8tjbm")

[node name="DashTiming" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
script = ExtResource("4_6bjok")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_speed = 4.0
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.3
drag_right_margin = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" parent="Camera2D" instance=ExtResource("5_hpp62")]

[connection signal="start_dash_timer" from="." to="DashTimer" method="_on_player_start_dash_timer"]
[connection signal="start_dash_timing" from="." to="DashTiming" method="_on_player_start_dash_timing"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="time" from="DashTiming" to="." method="_on_dash_timing_time"]
[connection signal="timeout" from="DashTiming" to="." method="_on_dash_timing_timeout"]
